--- a/package.json
+++ b/package.json
@@ -1,12 +1,22 @@
 {
   "name": "rob-website-2018",
   "version": "1.0.0",
-  "description": "My new website",
   "main": "index.js",
   "repository": "https://github.com/IchbinRob/rob-website-2018.git",
-  "author": "Rob",
+  "author": "ichbinrob <rafrob5@gmail.com>",
   "license": "MIT",
-  "dependencies": {
-    "metalsmith": "^2.3.0"
+  "devDependencies": {
+    "browser-sync": "^2.23.7",
+    "gulp": "^3.9.1",
+    "gulp-metalsmith": "^1.1.0",
+    "gulp-responsive": "^2.10.0",
+    "gulp-sass": "^4.0.1",
+    "jstransformer-nunjucks": "^0.5.0",
+    "marked": "^0.3.19",
+    "metalsmith": "^2.3.0",
+    "metalsmith-layouts": "^2.1.0",
+    "metalsmith-markdown": "^0.2.2",
+    "metalsmith-permalinks": "^0.5.0",
+    "loom": "git+https://github.com/sonniesedge/loom.git#v2"
   }
 }
