--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "metalsmith": "^2.3.0",
     "metalsmith-layouts": "^2.1.0",
     "metalsmith-markdown": "^0.2.2",
-    "metalsmith-permalinks": "^0.5.0",
-    "loom": "git+https://github.com/sonniesedge/loom.git#v2"
+    "metalsmith-permalinks": "^0.5.0"
+  },
+  "dependencies": {
+    "metalsmith-collections": "^0.9.0"
   }
 }
